--- a/TextLCD_16x2/TextLCD_16x2.ioc
+++ b/TextLCD_16x2/TextLCD_16x2.ioc
@@ -13,20 +13,27 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PB0
-Mcu.Pin1=PB1
-Mcu.Pin10=PB9
-Mcu.Pin11=VP_SYS_VS_ND
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin2=PB2
-Mcu.Pin3=PB10
-Mcu.Pin4=PB3
-Mcu.Pin5=PB4
-Mcu.Pin6=PB5
-Mcu.Pin7=PB6
-Mcu.Pin8=PB7
-Mcu.Pin9=PB8
-Mcu.PinsNb=13
+Mcu.Pin0=PA1
+Mcu.Pin1=PA2
+Mcu.Pin10=PB10
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_SYS_VS_ND
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PA3
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -43,6 +50,20 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
@@ -89,7 +110,7 @@ ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
